# pulox

./: Cargo.toml  README.md  crates.js  rustfmt.toml  search-index.js  settings.html  source-files.js
.cargo/: config.toml
.github/: README.md
.github/workflows/: build.yaml  rustdoc.yaml
contec-protocol/: Cargo.toml
contec-protocol/src/: bit_ops.rs  encoding.rs  error.rs  incoming_package.rs  lib.rs  outgoing_package.rs  pulox.rs  pulse_oximeter.rs  traits.rs
contec_protocol/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.PulseOximeter.html  trait.AsyncReadWrite.html  type.Result.html
contec_protocol/error/: enum.Error.html
contec_protocol/incoming_package/: enum.IncomingPackage.html  enum.IncomingStateMachine.html  index.html  sidebar-items.js  struct.CommandFeedback.html  struct.DeviceIdentifier.html  struct.DeviceNotice.html  struct.DisconnectNotice.html  struct.FreeFeedback.html  struct.PIIdentifiers.html  struct.RealTimeData.html  struct.StorageData.html  struct.StorageDataIdentifiers.html  struct.StorageDataLength.html  struct.StorageDataSegmentAmount.html  struct.StorageDataWithPI.html  struct.StorageStartTimeDate.html  struct.StorageStartTimeTime.html  struct.UserAmount.html  struct.UserInformation.html
contec_protocol/outgoing_package/: enum.ControlCommand.html  (+5 more)
matlab/: Cargo.toml  Pulox.m  build.rs  pulox_demo.m  readme.md
matlab/mex/: Cargo.toml  build.rs  wrapper.h
matlab/mex/src/: abort.rs  allocator.rs  bindings.rs  entry.rs  error.rs  io.rs  lib.rs
matlab/pulox/: Cargo.toml
matlab/pulox/src/: lib.rs  mx_array.rs
matlab/src/: bindings.rs  lib.rs  util.rs
pulox-protocol/: Cargo.toml
src/: main.rs  output.rs  realtime.rs
(+26 files in other folders)
