[package]
name = "pulox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-serial = "5.4.1"
tokio-util = { version = "0.7.1", features = ["compat"] }
chrono = "0.4.19"
dialoguer = "0.10.1"
csv-async = "1.2"

contec-protocol = { path = "contec-protocol" }