[package]
name = "matlab"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["dylib"]

[build-dependencies]
bindgen = "0.60.1"

[dependencies]
contec-protocol = { path = "../contec-protocol" }
anyhow = "1.0.57"

futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-serial = "5.4.1"
tokio-util = { version = "0.7.1", features = ["compat"] }